# coinduction

./: .gitignore  Build.cabal  Build.hs  Files.mk  README  README.md  build.sh
bedrock-proofs/: .dir-locals.el  example.v  predicates.v  predicates2.v  semantics.v
bytewise/: Files.mk  Makefile  fun_coherence.v  fun_domains.v  fun_domains_aux.v  fun_domains_props.v  fun_domains_sugar.v  fun_semantics.v  fun_steps.v
ccs/: ccs.v
common/: Files.mk  Makefile  adequacy.v  all_proof.v  coq_makefile.mk  equate_map_reflection.v  ho_proof_gen.v  ho_proof_until_gen.v  map_disjointness.v  map_zipper.v  maps.v  pattern_simpl.v  pattern_tactics.v  patterns.v  proof.v  proof_automation.v  step_ok.v  until.v  until_all.v  until_all_ok.v  zipper_patterns.v
csl/: CSL.v  ConcurrentSeparationLogic.v  ConcurrentSeparationLogic2.v  ConcurrentSeparationLogic_old.v  Files.mk  Makefile  Map.v  coq_makefile.mk  ho_proof_until_gen.v  until_all_ok.v  until_ok.v
himp/: .dir-locals.el  Files.mk  Makefile  coq_makefile.mk  exec_test.v  fun_aux_steps.txt  fun_domains_props.v  fun_domains_props.v.d  himp.k  himp.labeled_rules  himp.lk  himp_cfg_and_prims.v  himp_claims.v  himp_step_adequacy.v  himp_steps.v  himp_subsort_adequacy.v  himp_syntax.v  himp_syntax_sugar.v  himp_tactics.v  make_semantics.sh  tactic.tex  test_kcoq.sh  test_rules.sh  test_syntax.sh
himp-old/: README  coinduction.v  domains.v  eval_proofs.v  evaluator.v  extraction.v  gen_steps.v  kernelc.v  kstep.v  kstyle.v  mult_proof.v.bak  run.ml  simple_proofs.v
imp/: Files.mk  coind.v  example.v  hoare-effects.v  hoare.v  imp.v
(+150 files in other folders)
